--- a/Sources/Samples/CLK.Threading.Samples.No003/MainWindow.xaml
+++ b/Sources/Samples/CLK.Threading.Samples.No003/MainWindow.xaml
@@ -2,5 +2,5 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded" Unloaded="Window_Unloaded">
-    <TextBlock x:Name="TextBlock001" FontSize="48" VerticalAlignment="Center"  HorizontalAlignment="Center" Text="123" />
+    <TextBlock x:Name="TextBlock001" FontSize="48" VerticalAlignment="Center"  HorizontalAlignment="Center" />
 </Window>
